--- a/Server/WCFServer/LocationWCF/Windows/DbConfigureWindow.xaml
+++ b/Server/WCFServer/LocationWCF/Windows/DbConfigureWindow.xaml
@@ -13,12 +13,15 @@
                 <MenuItem Header="SqlServer" Name="MenuInitMSSql" Click="MenuInitMSSql_Click"></MenuItem>
                 <MenuItem Header="Sqlite" Name="MenuInitSqlite" Click="MenuInitSqlite_Click"></MenuItem>
             </MenuItem>
-            <MenuItem Header="数据初始化">
+            <MenuItem Header="读取数据">
                 <MenuItem Header="区域" Name="MenuInitTopo" Click="MenuInitTopo_Click"></MenuItem>
                 <MenuItem Header="区域权限" Name="MenuInitAA" Click="MenuInitAA_OnClick"></MenuItem>
                 <MenuItem Header="实时位置" Name="MenuRealPos" Click="MenuRealPos_OnClick"></MenuItem>
                 <MenuItem Header="人员 标签" Name="MenuPersonAndCard" Click="MenuPersonAndCard_OnClick"></MenuItem>
                 <MenuItem Header="基站测量配置信息" Name="MenuArchorSetting" Click="MenuArchorSetting_Click"></MenuItem>
+            </MenuItem>
+            <MenuItem Header="保存数据">
+                <MenuItem Header="区域" Name="MenuSaveTop" Click="MenuSaveTop_Click"></MenuItem>
             </MenuItem>
             <MenuItem Header="工具">
                 <MenuItem Header="整理初始化设备" Name="MenuRemoveArchor" Click="MenuRemoveArchor_Click"></MenuItem>
