基站工具修改
1.处理错误数据的基站
2.修改导出基站配置
3.添加设备复制功能
4.修改测量墩的坐标

--- a/Server/WCFServer/LocationWCF/Windows/NewAreaWindow.xaml
+++ b/Server/WCFServer/LocationWCF/Windows/NewAreaWindow.xaml
@@ -32,7 +32,7 @@
                     </DockPanel>
                     <DockPanel>
                         <Label Width="100">大小</Label>
-                        <WPFClientControlLib:PointControl x:Name="TbSize"/>
+                        <WPFClientControlLib:PointControl x:Name="TbSize" X="2" Y="2"/>
                     </DockPanel>
                 </StackPanel>
             </GroupBox>
