--- a/Tools/AutoCADCommands/GUIs/InputBox.xaml
+++ b/Tools/AutoCADCommands/GUIs/InputBox.xaml
@@ -4,7 +4,7 @@
         Background="Silver"
         Height="239" Width="336" Title="Input" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" ShowInTaskbar="False">
     <Grid>
-        <TextBox Margin="10,10,10,38" Name="InputTextBox" BorderThickness="1" BorderBrush="Black" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" />
+        <TextBox Margin="10,10,10,38" Name="InputTextBox" BorderThickness="1" BorderBrush="Black" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" AcceptsReturn="True"/>
         <Button Content="OK" Height="23" HorizontalAlignment="Right" Margin="0,0,90,10" VerticalAlignment="Bottom" Width="75" Click="OkButton_Click" />
         <Button Content="Cancel" Height="23" HorizontalAlignment="Right" Margin="0,0,10,10" VerticalAlignment="Bottom" Width="75" Click="CancelButton_Click" />
     </Grid>
