--- a/Server/WebSite/LocationWeb/Views/Images/Index.cshtml
+++ b/Server/WebSite/LocationWeb/Views/Images/Index.cshtml
@@ -8,6 +8,7 @@
 <img id="topView" style="width:100%; height:100%" />
 <div id="timeDiv"></div>
 
+<script src="~/Scripts/jquery-1.10.2.js"></script>
 <script type="text/javascript">   
     //获取顶视图url
     function freshPic() {
