--- a/Server/WebSite/LocationWeb/Views/Shared/_Layout.cshtml
+++ b/Server/WebSite/LocationWeb/Views/Shared/_Layout.cshtml
@@ -115,7 +115,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="ThreeDimensional://">三维程序</a> 
+                        <a href="LocationSystem:" id="exe">三维程序</a> 
                     </li>                                                                                 
                 </ul>
                              
@@ -135,5 +135,9 @@
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/jqueryajax")
     @RenderSection("scripts", required: false)
+
+    <script src="~/Scripts/jquery-1.10.2.js"></script>
+    <script src="~/Scripts/LocationSystem.js"></script>
+    <script src="~/Scripts/protocolcheck.js"></script>
 </body>
 </html>
